--- a/template/build.gradle
+++ b/template/build.gradle
@@ -1,33 +1,31 @@
-buildscript {
-	ext {
-		springBootVersion = '2.1.0.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+plugins {
+	id 'org.springframework.boot' version "$springBootVersion"
+	id 'io.spring.dependency-management' version "$springDependencyManager"
+	id 'java'
 }
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.asyncapi'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
 	mavenCentral()
 }
 
-
 dependencies {
-
-	implementation('org.springframework.boot:spring-boot-starter-integration')
-	implementation('org.springframework.integration:spring-integration-mqtt')
+	{% if asyncapi.hasServers() %}
+		{% for serverName, server in asyncapi.servers() %}
+			{% if server.protocol() === 'amqp' %}
 	implementation('org.springframework.integration:spring-integration-amqp')
+			{% endif %}
+			{% if server.protocol() === 'mqtt' %}
+	implementation('org.springframework.integration:spring-integration-mqtt')
+			{% endif %}
+			{% if server.protocol() === 'kafka' %}
+	implementation('org.springframework.integration:spring-integration-kafka')
+			{% endif %}
+		{% endfor %}
+	{% endif %}
+	implementation('org.springframework.boot:spring-boot-starter-integration')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
