--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -1,34 +1,36 @@
-{% for server in asyncapi.servers %}
-  {% if server.scheme === 'amqp' %}
-amqp:
-  broker:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-  exchange:
-{% for topicName, topic in asyncapi.topics %}
-  {% if topic.publish %}
-    {{topic.x-service-name}}: {{topic}}
-  {% endif %}
-{% endfor %}
-  queue:
-{% for topicName, topic in asyncapi.topics %}
-  {% if topic.subscribe %}
-    {{topic.x-service-name}}: {{topic}}
-  {% endif %}
-{% endfor %}
-  {% endif %}
-  {% if server.scheme === 'mqtt' %}
-mqtt:
-  broker:
-    host: tcp://{{server.url}}
-    port: {{server.variables.port.default}}
-    username:
-    password:
-  topic:
-{% for topicName, topic in asyncapi.topics %}
-    {{topic.x-service-name}}Topic: {{topic}}
-{% endfor %}
-  {% endif %}
-{% endfor %}
+{% if asyncapi.hasServers() %}
+  {% for serverName, server in asyncapi.servers() %}
+    {% if server.protocol() === 'amqp' %}
+  amqp:
+    broker:
+      host: localhost
+      port: 5672
+      username: guest
+      password: guest
+    exchange:
+      {% for channelName, channel in asyncapi.channels() %}
+        {% if channel.hasPublish() %}
+      {{channel.x-service-name()}}: {{channelName}}
+        {% endif %}
+      {% endfor %}
+    queue:
+      {% for channelName, channel in asyncapi.channels() %}
+        {% if channel.hasSubscribe() %}
+      {{channel.x-service-name()}}: {{channelName}}
+        {% endif %}
+      {% endfor %}
+    {% endif %}
+    {% if server.protocol() === 'mqtt' %}
+  mqtt:
+    broker:
+      host: tcp://{{server.url()}}
+      port: {{server.variables(port).defaultValue()}}
+      username:
+      password:
+    topic:
+      {% for channelName, channel in asyncapi.channels() %}
+      {{channel.x-service-name()}}Topic: {{channelName}}
+      {% endfor %}
+    {% endif %}
+  {% endfor %}
+{% endif %}
