--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -1,35 +1,35 @@
 {% if asyncapi.hasServers() %}
   {% for serverName, server in asyncapi.servers() %}
     {% if server.protocol() === 'amqp' %}
-  amqp:
-    broker:
-      host: localhost
-      port: 5672
-      username: guest
-      password: guest
-    exchange:
+amqp:
+  broker:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+  exchange:
       {% for channelName, channel in asyncapi.channels() %}
-        {% if channel.hasPublish() %}
-      {{channel.x-service-name()}}: {{channelName}}
+        {% if channel.hasPublish() and channel.publish().bindings('amqp') %}
+    {{channel.publish().bindings('amqp').exchange().name()}}: {{channelName}}
         {% endif %}
       {% endfor %}
-    queue:
+  queue:
       {% for channelName, channel in asyncapi.channels() %}
-        {% if channel.hasSubscribe() %}
-      {{channel.x-service-name()}}: {{channelName}}
+        {% if channel.hasSubscribe() and channel.subscribe().bindings('amqp') %}
+    {{channel.subscribe().bindings('amqp').queue().name()}}: {{channelName}}
         {% endif %}
       {% endfor %}
     {% endif %}
     {% if server.protocol() === 'mqtt' %}
-  mqtt:
-    broker:
-      host: tcp://{{server.url()}}
-      port: {{server.variables(port).defaultValue()}}
-      username:
-      password:
-    topic:
+mqtt:
+  broker:
+    host: tcp://{{server.url()}}
+    port: {{server.variables(port).defaultValue()}}
+    username:
+    password:
+  topic:
       {% for channelName, channel in asyncapi.channels() %}
-      {{channel.x-service-name()}}Topic: {{channelName}}
+    {{channelName}}Topic: {{channelName}}
       {% endfor %}
     {% endif %}
   {% endfor %}
