--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -1,11 +1,11 @@
-{%- set hasPublish = false -%}
 {%- set hasSubscribe = false -%}
+{%- set hasPublish = false -%}
 {%- for channelName, channel in asyncapi.channels() -%}
-    {%- if channel.hasSubscribe() -%}
-        {%- set hasSubscribe = true -%}
-    {%- endif -%}
     {%- if channel.hasPublish() -%}
         {%- set hasPublish = true -%}
+    {%- endif -%}
+    {%- if channel.hasSubscribe() -%}
+        {%- set hasSubscribe = true -%}
     {%- endif -%}
 {%- endfor -%}
 {%- if asyncapi | isProtocol('amqp') %}
@@ -17,14 +17,14 @@ amqp:
     password: guest
   exchange:
   {% for channelName, channel in asyncapi.channels() %}
-    {% if channel.hasPublish() and channel.publish().bindings('amqp') %}
-    {{channel.publish().bindings('amqp').exchange().name()}}: {{channelName}}
+    {% if channel.hasSubscribe() and channel.subscribe().bindings('amqp') %}
+    {{channel.subscribe().bindings('amqp').exchange().name()}}: {{channelName}}
     {% endif %}
   {% endfor %}
   queue:
   {% for channelName, channel in asyncapi.channels() %}
-    {% if channel.hasSubscribe() and channel.subscribe().bindings('amqp') %}
-    {{channel.subscribe().bindings('amqp').queue().name()}}: {{channelName}}
+    {% if channel.hasPublish() and channel.publish().bindings('amqp') %}
+    {{channel.publish().bindings('amqp').queue().name()}}: {{channelName}}
     {% endif %}
   {% endfor %}
 {% endif %}
@@ -45,7 +45,7 @@ mqtt:
 {%- if asyncapi | isProtocol('kafka') %}
 kafka:
   bootstrap-servers: {% for serverName, server in asyncapi.servers() %}{{server.url()}}{% if not loop.last %},{% endif %}{% endfor %}
-  {%- if hasSubscribe %}
+  {%- if hasPublish %}
   subscribe:
     pool-timeout: 3000
     amount-of-listeners: 3
