feat: Add support of Kafka and update to spec 2.0.0 (#7)

--- a/template/build.gradle
+++ b/template/build.gradle
@@ -1,33 +1,28 @@
-buildscript {
-	ext {
-		springBootVersion = '2.1.0.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+plugins {
+	id 'org.springframework.boot' version "$springBootVersion"
+	id 'io.spring.dependency-management' version "$springDependencyManager"
+	id 'java'
 }
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.asyncapi'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
 	mavenCentral()
 }
 
-
 dependencies {
-
-	implementation('org.springframework.boot:spring-boot-starter-integration')
-	implementation('org.springframework.integration:spring-integration-mqtt')
+	{%- if asyncapi | isProtocol('amqp') %}
 	implementation('org.springframework.integration:spring-integration-amqp')
+	{% endif -%}
+	{%- if asyncapi | isProtocol('mqtt') %}
+	implementation('org.springframework.integration:spring-integration-mqtt')
+	{% endif -%}
+	{%- if asyncapi | isProtocol('kafka') %}
+	implementation('org.springframework.kafka:spring-kafka')
+	implementation('com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider')
+	{% endif -%}
+	implementation('org.springframework.boot:spring-boot-starter-integration')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
