--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -11,8 +11,8 @@
 {%- for serverName, server in asyncapi.servers() %}{% if server.protocol() == 'amqp' %}
 amqp:
   broker:
-    host: {{server.url()}}
-    port: {{server.variable('port').defaultValue()}}
+    host: {{server.url() | replace(':{port}', '') }}
+    port: {% if server.variable('port') %}{{server.variable('port').defaultValue()}}{% endif %}
     username:
     password:
   exchange:
@@ -31,8 +31,8 @@ amqp:
 {% if server.protocol() == 'mqtt' %}
 mqtt:
   broker:
-    host: tcp://{{server.url()}}
-    port: {{server.variable('port').defaultValue()}}
+    host: tcp://{{server.url() | replace(':{port}', '')}}
+    port: {% if server.variable('port') %}{{server.variable('port').defaultValue()}}{% endif %}
     username:
     password:
   topic:
@@ -42,7 +42,7 @@ mqtt:
 {% endif %}{% endfor %}
 {%- if asyncapi | isProtocol('kafka') %}
 kafka:
-  bootstrap-servers: {% for serverName, server in asyncapi.servers() %}{{server.url()}}{% if not loop.last %},{% endif %}{% endfor %}
+  bootstrap-servers: {% for serverName, server in asyncapi.servers() %}{% if server.variable('port') %}{{server.url() | replace('{port}', server.variable('port').defaultValue())}}{% else %}{{server.url()}}{% endif %}{% if not loop.last %},{% endif %}{% endfor %}
   {%- if hasPublish %}
   subscribe:
     pool-timeout: 3000
