--- a/template/build.gradle
+++ b/template/build.gradle
@@ -21,8 +21,9 @@ dependencies {
 	{% endif -%}
 	{%- if asyncapi | isProtocol('kafka') %}
 	implementation('org.springframework.kafka:spring-kafka')
-	implementation('com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider')
 	{% endif -%}
+    implementation('com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider')
+    implementation('javax.validation:validation-api')
 	implementation('org.springframework.boot:spring-boot-starter-integration')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
