feat: add descriptions as javadocs over generated code (#18)
* feat: add descriptions as javadocs over generated code

* fix: generation for mqtt and amqp (#14)

* fix api calls for mqtt and amqp

* fix port variables

* feat: add annotations to the model generation (#12)

* WIP, update to spec 2.0

* WIP, update to spec 2.0, remove definition of topic via extension

* working version for api 2.0

* add model generation

* Add support of Kafka generation

* update readme

* fix value ref, add jackson lib

* add validation annotations to schema

* fix no type case

* add annotation for jackson

* add description and examples to javadoc

* Update readme, move missed features block

* switch publish to subscribe and vice versa, because of wrong understanding of spec

* Fix consumed key, add key to publish operation

* move jackson and validation dependencies from kafka block

* fix README formatting

* mark annotations as done in README

* add support of multi-line description

* fix json in examples

* chore(release): 0.5.0 (#15)

chore(release): 0.5.0

* fix api calls for mqtt and amqp

* fix port variables

* fix yet another api operation call

Co-authored-by: asyncapi-bot <61865014+asyncapi-bot@users.noreply.github.com>

* chore(release): 0.5.1 (#19)

chore(release): 0.5.1

* feat: generalize Kafka properties (#16)

* feat: generalize kafka properties. use spring-kafka props inst.of custom, move props to template params

* fix wrong param name in example

* fix: generation for mqtt and amqp (#14)

* fix api calls for mqtt and amqp

* fix port variables

* feat: add annotations to the model generation (#12)

* WIP, update to spec 2.0

* WIP, update to spec 2.0, remove definition of topic via extension

* working version for api 2.0

* add model generation

* Add support of Kafka generation

* update readme

* fix value ref, add jackson lib

* add validation annotations to schema

* fix no type case

* add annotation for jackson

* add description and examples to jav

--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -10,7 +10,8 @@
 {%- endfor -%}
 {%- for serverName, server in asyncapi.servers() %}{% if server.protocol() == 'amqp' %}
 amqp:
-  broker:
+  broker: {% for line in server.description() | splitByLines %}
+    # {{line | safe}}{% endfor %}
     host: {{server.url() | replace(':{port}', '') }}
     port: {% if server.variable('port') %}{{server.variable('port').defaultValue()}}{% endif %}
     username:
@@ -30,7 +31,8 @@ amqp:
 {% endif %}
 {% if server.protocol() == 'mqtt' %}
 mqtt:
-  broker:
+  broker: {% for line in server.description() | splitByLines %}
+    # {{line | safe}}{% endfor %}
     host: tcp://{{server.url() | replace(':{port}', '')}}
     port: {% if server.variable('port') %}{{server.variable('port').defaultValue()}}{% endif %}
     username:
@@ -42,7 +44,9 @@ mqtt:
 {% endif %}{% endfor %}
 {%- if asyncapi | isProtocol('kafka') %}
 spring:
-  kafka:
+  kafka: {% for serverName, server in asyncapi.servers() %}
+    # - {{serverName}} in {{server.url()}} : {% for line in server.description() | splitByLines %}
+    # {{line | safe}}{% endfor %}{% endfor %}
     bootstrap-servers: {% for serverName, server in asyncapi.servers() %}{% if server.variable('port') %}{{server.url() | replace('{port}', server.variable('port').defaultValue())}}{% else %}{{server.url()}}{% endif %}{% if not loop.last %},{% endif %}{% endfor %}
   {%- if hasPublish %}
     listener:
