feat: use new generic filters

--- a/.tp-config.json
+++ b/.tp-config.json
@@ -13,5 +13,8 @@
       "required": false
     }
   },
-  "generator": ">=0.40.1 <2.0.0"
+  "generator": ">=0.40.1 <2.0.0",
+  "filters": [
+    "@asyncapi/generator-filters"
+  ]
 }
