feat: add generator param to config and gitignore

--- a/.tp-config.json
+++ b/.tp-config.json
@@ -2,5 +2,6 @@
   "supportedProtocols": ["kafka", "amqp", "mqtt"],
   "nonRenderableFiles": [
     "**/*.jar"
-  ]
+  ],
+  "generator": ">=0.40.1 <2.0.0"
 }
