feat: add generator param to config and gitignore (#23)

--- a/.tp-config.json
+++ b/.tp-config.json
@@ -12,5 +12,6 @@
       "description": "Only for Kafka. Number of threads to run in the listener containers.",
       "required": false
     }
-  }
+  },
+  "generator": ">=0.40.1 <2.0.0"
 }
