--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "access": "public"
   },
   "dependencies": {
-    "lodash": "^4.17.15",
-    "@asyncapi/generator-filters": "https://github.com/derberg/generator-filters#use-filters-lib"
+    "@asyncapi/generator-filters": "^1.0.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
