--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@asyncapi/generator-filters": "^1.0.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
