feat: add opposite site generation mode

--- a/.tp-config.json
+++ b/.tp-config.json
@@ -4,6 +4,10 @@
     "**/*.jar"
   ],
   "parameters": {
+    "generateOppositeSide": {
+      "description": "Generate application that will publish messages to `publish` operation of channels and read messages from `subscribe` operation of channels. Literally this flag just swap `publish` and `subscribe` operations in channels",
+      "required": false
+    },
     "listenerPollTimeout": {
       "description": "Only for Kafka. Timeout to use when polling the consumer.",
       "required": false
