--- a/.tp-config.json
+++ b/.tp-config.json
@@ -5,7 +5,7 @@
   ],
   "parameters": {
     "generateOppositeSide": {
-      "description": "Generate application that will publish messages to `publish` operation of channels and read messages from `subscribe` operation of channels. Literally this flag just swap `publish` and `subscribe` operations in channels",
+      "description": "Generate application that will publish messages to `publish` operation of channels and read messages from `subscribe` operation of channels. Literally this flag just swap `publish` and `subscribe` operations in channels.",
       "required": false
     },
     "listenerPollTimeout": {
