feat: add example of kafka tests

--- a/template/build.gradle
+++ b/template/build.gradle
@@ -21,8 +21,11 @@ dependencies {
 	{% endif -%}
 	{%- if asyncapi | isProtocol('kafka') %}
 	implementation('org.springframework.kafka:spring-kafka')
+	testImplementation('org.springframework.kafka:spring-kafka-test')
+	testImplementation('junit:junit:4.12')
 	{% endif -%}
     implementation('com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider')
+	implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
     implementation('javax.validation:validation-api')
 	implementation('org.springframework.boot:spring-boot-starter-integration')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
