--- a/template/build.gradle
+++ b/template/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation('org.springframework.kafka:spring-kafka')
 	testImplementation('org.springframework.kafka:spring-kafka-test')
 	testImplementation('junit:junit:4.12')
+	testCompile('org.testcontainers:testcontainers:1.14.1')
+	testCompile('org.testcontainers:kafka:1.14.1')
 	{% endif -%}
     implementation('com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider')
 	implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
