--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -50,7 +50,7 @@ spring:
     bootstrap-servers: {% for serverName, server in asyncapi.servers() %}{% if server.variable('port') %}{{server.url() | replace('{port}', server.variable('port').defaultValue())}}{% else %}{{server.url()}}{% endif %}{% if not loop.last %},{% endif %}{% endfor %}
   {%- if hasPublish %}
     listener:
-      poll-timeout: {% if params.listenerPollTimeout %}{{params.listenerPollTimeout}}{% else %}3000{% endif%}
-      concurrency: {% if params.listenerConcurrency %}{{params.listenerConcurrency}}{% else %}3{% endif%}
+      poll-timeout: {{params.listenerPollTimeout}}
+      concurrency: {{params.listenerConcurrency}}
   {% endif %}
 {% endif %}
