reuse generic hooks to store original async api file

--- a/.tp-config.json
+++ b/.tp-config.json
@@ -13,10 +13,18 @@
       "description": "Only for Kafka. Number of threads to run in the listener containers.",
       "default": 3,
       "required": false
+    },
+    "asyncapiFileDir": {
+      "description": "Parameter of @asyncapi/generator-hooks#createAsyncapiFile, allows to specify where original AsyncAPI file will be stored.",
+      "default": "src/main/resources/api/",
+      "required": false
     }
   },
   "generator": ">=0.46.0 <2.0.0",
   "filters": [
     "@asyncapi/generator-filters"
-  ]
+  ],
+  "hooks": {
+    "@asyncapi/generator-hooks": "createAsyncapiFile"
+  }
 }
