change flag name, update description

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
       "**/*.jar"
     ],
     "parameters": {
-      "generateOppositeSide": {
+      "inverseOperations": {
         "description": "Generate application that will publish messages to `publish` operation of channels and read messages from `subscribe` operation of channels. Literally this flag just swap `publish` and `subscribe` operations in channels.",
         "default": false,
         "required": false
