feat: add hook and parameter to inverse operations (#27)

--- a/package.json
+++ b/package.json
@@ -71,6 +71,11 @@
       "**/*.jar"
     ],
     "parameters": {
+      "inverseOperations": {
+        "description": "Generate application that will publish messages to `publish` operation of channels and read messages from `subscribe` operation of channels. Literally this flag just swap `publish` and `subscribe` operations in channels.",
+        "default": false,
+        "required": false
+      },
       "listenerPollTimeout": {
         "description": "Only for Kafka. Timeout to use when polling the consumer.",
         "default": 3000,
