--- a/package.json
+++ b/package.json
@@ -77,6 +77,11 @@
         "default": false,
         "required": false
       },
+      "disableEqualsHashCode": {
+        "description": "Disable generation of equals and hashCode methods for model classes.",
+        "default": "false",
+        "required": false
+      },
       "listenerPollTimeout": {
         "description": "Only for Kafka. Timeout to use when polling the consumer.",
         "default": 3000,
