--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -33,14 +33,28 @@ amqp:
 mqtt:
   broker: {% for line in server.description() | splitByLines %}
     # {{line | safe}}{% endfor %}
-    host: tcp://{{server.url() | replace(':{port}', '')}}
-    port: {% if server.variable('port') %}{{server.variable('port').defaultValue()}}{% endif %}
+    address: {% if server.variable('port') %}{{server.url() | replace('{port}', server.variable('port').defaultValue())}}{% else %}{{server.url()}}{% endif %}
     username:
     password:
+    {% if server.binding('mqtt') and server.binding('mqtt').clientId %}clientId: {{server.binding('mqtt').clientId}}{% endif %}
+    {% if server.binding('mqtt') and server.binding('mqtt').cleanSession | isDefined %}cleanSession: {{server.binding('mqtt').cleanSession}}{% endif %}
+    {% if server.binding('mqtt') and server.binding('mqtt').lastWill %}lastWill:
+      topic: {{server.binding('mqtt').lastWill.topic}}
+      message: {{server.binding('mqtt').lastWill.message}}
+      qos: {{server.binding('mqtt').lastWill.qos}}
+      retain: {{server.binding('mqtt').lastWill.retain}}
+    {% endif %}
+    timeout:
+      completion: {{param.completionTimeout}}
+      disconnection: {{param.disconnectionTimeout}}
+      connection: {{param.connectionTimeout}}
+      {% if server.binding('mqtt') and server.binding('mqtt').keepAlive | isDefined %}keepAlive: {{server.binding('mqtt').keepAlive}}{% endif %}
   topic:
-    {% for channelName, channel in asyncapi.channels() %}
-    {{channelName}}Topic: {{channelName}}
-    {% endfor %}
+    {% for channelName, channel in asyncapi.channels() %}{% if channel.hasPublish() %}
+    {{channel.publish().id() | camelCase}}: {{channelName}}
+    {% elif channel.hasSubscribe() %}
+    {{channel.subscribe().id() | camelCase}}: {{channelName}}
+    {% endif %}{% endfor %}
 {% endif %}{% endfor %}
 {%- if asyncapi | isProtocol('kafka') %}
 spring:
