--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -45,9 +45,9 @@ mqtt:
       retain: {{server.binding('mqtt').lastWill.retain}}
     {% endif %}
     timeout:
-      completion: {{param.completionTimeout}}
-      disconnection: {{param.disconnectionTimeout}}
-      connection: {{param.connectionTimeout}}
+      completion: {{params.completionTimeout}}
+      disconnection: {{params.disconnectionTimeout}}
+      connection: {{params.connectionTimeout}}
       {% if server.binding('mqtt') and server.binding('mqtt').keepAlive | isDefined %}keepAlive: {{server.binding('mqtt').keepAlive}}{% endif %}
   topic:
     {% for channelName, channel in asyncapi.channels() %}{% if channel.hasPublish() %}
