feat: added pulsar support + transformation from app to lib

--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "supportedProtocols": [
       "kafka",
       "amqp",
-      "mqtt"
+      "mqtt",
+      "pulsar"
     ],
     "nonRenderableFiles": [
       "**/*.jar"
