--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@asyncapi/generator-filters": "^1.0.0",
     "@asyncapi/generator-hooks": "^0.1.0",
     "fs-extra": "^9.0.0",
+    "js-yaml": "^3.14.0",
     "lodash": "^4.17.15",
     "tmp": "^0.2.1"
   },
