--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@asyncapi/generator-hooks": "^0.1.0",
     "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
+    "replace-in-file": "^6.1.0",
     "tmp": "^0.2.1"
   },
   "devDependencies": {
