ci: remove release workflow to use the one that is global

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "test": "echo \"No test specified yet\"",
     "release": "semantic-release",
-    "get-version": "echo $npm_package_version"
+    "generate:assets": "echo 'No additional assets need to be generated at the moment'",
+    "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION"
   },
   "publishConfig": {
     "access": "public"
