--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@asyncapi/generator-filters": "^1.0.0",
     "@asyncapi/generator-hooks": "^0.1.0",
+    "@asyncapi/generator-model-sdk": "file:../generator-model-sdk",
     "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
     "replace-in-file": "^6.1.0",
