--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@asyncapi/generator-filters": "^2.1.0",
     "@asyncapi/generator-hooks": "^0.1.0",
     "fs-extra": "^9.0.0",
-    "lodash": "^4.17.15",
+    "json-decycle": "^1.0.0",
+    "lodash": "^4.17.21",
     "replace-in-file": "^6.1.0",
     "tmp": "^0.2.1"
   },
