--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -8,6 +8,7 @@
         {%- set hasSubscribe = true -%}
     {%- endif -%}
 {%- endfor -%}
+
 {%- for serverName, server in asyncapi.servers() %}{% if server.protocol() == 'amqp' %}
 amqp:
   broker: {% for line in server.description() | splitByLines %}
@@ -29,6 +30,7 @@ amqp:
     {% endif %}
   {% endfor %}
 {% endif %}
+
 {% if server.protocol() == 'mqtt' %}
 mqtt:
   broker: {% for line in server.description() | splitByLines %}
@@ -36,9 +38,13 @@ mqtt:
     address: {% if server.variable('port') %}{{server.url() | replace('{port}', server.variable('port').defaultValue())}}{% else %}{{server.url()}}{% endif %}
     username:
     password:
-    {% if server.binding('mqtt') and server.binding('mqtt').clientId %}clientId: {{server.binding('mqtt').clientId}}{% endif %}
-    {% if server.binding('mqtt') and server.binding('mqtt').cleanSession | isDefined %}cleanSession: {{server.binding('mqtt').cleanSession}}{% endif %}
-    {% if server.binding('mqtt') and server.binding('mqtt').lastWill %}lastWill:
+    {% if server.binding('mqtt') and server.binding('mqtt').clientId and (params.mqttClientId == 'guest') %}
+    clientId: {{ server.binding('mqtt').clientId }}
+    {% else %}
+    clientId: {{ params.mqttClientId }}
+    {% endif %}
+    {% if server.binding('mqtt') and server.binding('mqtt').cleanSession | isDefined %} cleanSession: {{server.binding('mqtt').cleanSession}}{% endif %}
+    {% if server.binding('mqtt') and server.binding('mqtt').lastWill %} lastWill:
       topic: {{server.binding('mqtt').lastWill.topic}}
       message: {{server.binding('mqtt').lastWill.message}}
       qos: {{server.binding('mqtt').lastWill.qos}}
@@ -56,6 +62,7 @@ mqtt:
     {{channel.subscribe().id() | camelCase}}: {{channelName}}
     {% endif %}{% endfor %}
 {% endif %}{% endfor %}
+
 {%- if asyncapi | isProtocol('kafka') %}
 spring:
   kafka: {% for serverName, server in asyncapi.servers() %}
