test: Extend test case for boolean (#272)

--- a/tests/mocks/map-format.yml
+++ b/tests/mocks/map-format.yml
@@ -32,6 +32,10 @@ components:
             additionalProperties:
               type: integer
               format: int64
+          flags:
+            description: Flags
+            additionalProperties:
+              type: boolean
           album:
             $ref: '#/components/schemas/Album'
           interprets:
