--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -38,13 +38,15 @@ mqtt:
     address: {% if server.variable('port') %}{{server.url() | replace('{port}', server.variable('port').defaultValue())}}{% else %}{{server.url()}}{% endif %}
     username:
     password:
-    {% if server.binding('mqtt') and server.binding('mqtt').clientId and (params.mqttClientId == 'guest') %}
+    {% if params.mqttClientId %}
+    clientId : {{ params.mqttClientId }}
+    {% elif server.binding('mqtt') and server.binding('mqtt').clientId %}
     clientId: {{ server.binding('mqtt').clientId }}
     {% else %}
-    clientId: {{ params.mqttClientId }}
+    clientId: default
     {% endif %}
-    {% if server.binding('mqtt') and server.binding('mqtt').cleanSession | isDefined %} cleanSession: {{server.binding('mqtt').cleanSession}}{% endif %}
-    {% if server.binding('mqtt') and server.binding('mqtt').lastWill %} lastWill:
+    {% if server.binding('mqtt') and server.binding('mqtt').cleanSession | isDefined %}cleanSession: {{server.binding('mqtt').cleanSession}}{% endif %}
+    {% if server.binding('mqtt') and server.binding('mqtt').lastWill %}lastWill:
       topic: {{server.binding('mqtt').lastWill.topic}}
       message: {{server.binding('mqtt').lastWill.message}}
       qos: {{server.binding('mqtt').lastWill.qos}}
